k8s/supabase/gotrue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supabase-auth
  namespace: supabase
  labels:
    app.kubernetes.io/name: supabase-auth
    app.kubernetes.io/part-of: mem-dog
    app.kubernetes.io/component: supabase
spec:
  type: ClusterIP
  ports:
    - port: 9999
      targetPort: 9999
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: supabase-auth
